test_programs/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_function_leaks_private_type_in_return/src/main.nr

    pub mod moo {
        struct Bar {}

        pub fn bar() -> Bar {
            Bar {}
        }
    }
    fn main() {}
    